testing some stuff related to process streams